--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,4 +6,8 @@
     .link {
         @apply cursor-pointer hover:underline;
     }
+
+    .button {
+        @apply p-2 text-xs md:text-sm bg-gradient-to-b from-blue-200 to-blue-500 border border-blue-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-blue-500 active:from-blue-500; 
+    }
 }
